--- a/Admision-sim/src/app/components/shared/nav/nav.component.html
+++ b/Admision-sim/src/app/components/shared/nav/nav.component.html
@@ -1,1 +1,45 @@
-<p>Header works!</p>
+
+<nav class="navbar navbar-expand-lg navbar-light fixed-top shadow text-center" 
+  style="background-color: rgba(255, 255, 255, 0.212); backdrop-filter: blur(10px);">
+    <div class="container-fluid container">
+      <a class="navbar-brand" [routerLink]="['/']">
+        Navbar
+    </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link mx-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                <i class="bi bi-house"></i> &nbsp; Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2" [routerLink]="['/nosotros']" routerLinkActive="active">
+                <i class="bi bi-heart"></i> &nbsp; Nosotros
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2" [routerLink]="['/contacto']" routerLinkActive="active">
+                <i class="bi bi-chat-left"></i> &nbsp; Contacto
+            </a>
+          </li>
+        </ul>
+        
+        <li class="d-flex nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Cuenta
+            </a>
+            <ul class="dropdown-menu dropdown-menu-lg-end">
+                <li><a class="dropdown-item" [routerLink]="['/login']" routerLinkActive="active">
+                    <i class="bi bi-person-check"></i> &nbsp; Iniciar sesión</a>
+                </li>
+                <li><a class="dropdown-item" [routerLink]="['/registro']" routerLinkActive="active">
+                    <i class="bi bi-person-plus"></i> &nbsp; Registro</a>
+                </li>
+            </ul>
+        </li>
+      </div>
+    </div>
+  </nav>
