--- a/Admision-sim/src/app/components/shared/nav/nav.component.html
+++ b/Admision-sim/src/app/components/shared/nav/nav.component.html
@@ -27,7 +27,7 @@
           </li>
         </ul>
         
-        <li class="d-flex nav-item dropdown">
+        <li class="d-flex nav-item dropdown justify-content-center">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Cuenta
             </a>
