Mostrar contraseña, obtener usuario y mostrar en nav

--- a/Admision-sim/src/app/components/auth/login/login.component.html
+++ b/Admision-sim/src/app/components/auth/login/login.component.html
@@ -1,29 +1,48 @@
-
 <div class="mt-5">
     <div class="mt-5 pt-5">
         <div class="mb-5 container d-flex justify-content-center">
             <div class="p-4 p-sm-5 col-12 col-sm-7 rounded shadow">
                 <h2 class="text-center text-black-50 fw-bold">Iniciar sesión</h2>
-                <p class="text-center pb-4 text-black-50">Estmado usuario, inicie sesión ingresando sus credenciales de sesión</p>
+                <p class="text-center pb-4 text-black-50">
+                    Estmado usuario, inicie sesión ingresando sus credenciales de sesión
+                </p>
                 <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
                     <label for="email" class="form-label text-black-50">Correo electrónico</label>
-                    <input type="email" class="form-control" placeholder="ingrese su correo electrónico" 
-                        name="email" id="email" [(ngModel)]="user.email" required>
-    
-                    <label for="password" class="form-label mt-4 text-black-50">Contraseña</label>
-                    <input type="password" class="form-control" id="password" 
-                        placeholder="Ingrese su contraseña" name="password" [(ngModel)]="user.password" required>
-                    
+                    <input type="email" class="form-control" placeholder="ingrese su correo electrónico" name="email"
+                        id="email" [(ngModel)]="user.email" required />
+
+                    <div class="">
+                        <label for="password" class="form-label mt-4 text-black-50">Contraseña</label>
+                        <div class="input-group mb-3">
+                            <input [type]="password" class="form-control" id="password" placeholder="Ingrese su contraseña"
+                                name="password" [(ngModel)]="user.password" required />
+                            <button class="btn btn-outline-primary" (click)="onClick()">
+                                <i class="bi bi-eye-fill" aria-hidden="true" *ngIf="!show"></i>
+                                <i class="bi bi-eye-slash-fill" aria-hidden="true" *ngIf="show"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="form-check d-flex justify-content-center">
+                        <input class="form-check-input" type="checkbox" name="recordar" id="flexCheckDefault" [(ngModel)]="recordar">
+                        <label class="form-check-label" for="flexCheckDefault"> &nbsp; &nbsp;
+                          Recordar sesión
+                        </label>
+                    </div>
+
                     <div class="d-grid gap-2 mt-4">
-                        <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Iniciar sesión</button>
+                        <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">
+                            Iniciar sesión
+                        </button>
                     </div>
 
                     <p class="font-size-sm pt-4 text-center">
                         Aún no tienes una cuenta?
                         <a class="fw-bold text-decoration-none text-success" [routerLink]="['/registro']">
-                            Regístrate gratis!</a>
+                            Regístrate gratis!</a> <br> <br>
+                        
+                        <a href="#" class="font-size-sm text-decoration-none text-center">Olvidó su contraseña?</a>
                     </p>
-
                 </form>
             </div>
         </div>
