--- a/Admision-sim/src/app/components/shared/nav/nav.component.html
+++ b/Admision-sim/src/app/components/shared/nav/nav.component.html
@@ -29,7 +29,7 @@
         
         <li class="d-flex nav-item dropdown justify-content-center">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Cuenta
+                Cuenta {{user_lc.nombres}}
             </a>
             <ul class="dropdown-menu dropdown-menu-lg-end">
                 <li><a class="dropdown-item" [routerLink]="['/login']" routerLinkActive="active">
