Registro de usuario y json de universidad/areas y escuelas

--- a/Admision-sim/src/app/components/auth/register/register.component.html
+++ b/Admision-sim/src/app/components/auth/register/register.component.html
@@ -1,1 +1,143 @@
-<p>register works!</p>
+<app-nav></app-nav>
+
+<div class="mt-5">
+    <div class="mt-5 pt-5">
+        <div class="mb-5 container d-flex justify-content-center">
+            <div class="p-4 p-sm-5 col-12 col-sm-8 rounded shadow">
+                <h2 class="text-center text-black-50 fw-bold">Regístrate!</h2>
+                <p class="text-center pb-4 text-black-50">
+                    Cree una cuenta para disfrutar de las funciones de nuestro sistema <br>
+                    <small class="text-black">Y obtén acceso a un examen gratis!!</small>
+                </p>
+                <form #registroForm="ngForm" (ngSubmit)="registrar(registroForm)">
+                    <div class="row">
+                        <div class="col-12 col-sm-6">
+                            <label for="nombres" class="form-label text-black-50">Nombres</label>
+                            <input type="text" class="form-control" placeholder="Ingrese sus nombres"
+                                name="nombres" id="nombres" [(ngModel)]="user.nombres" required />
+                        </div>
+
+                        <div class="col-12 col-sm-6 mt-3 mt-sm-0">
+                            <label for="apellidos" class="form-label text-black-50">Apellidos</label>
+                            <input type="text" class="form-control" placeholder="Ingrese sus apellidos "
+                                name="apellidos" id="apellidos" [(ngModel)]="user.apellidos" required />
+                        </div>
+                    </div>
+
+                    <div class="row mt-4">
+                        <div class="col-12 col-sm-6">
+                            <label for="email" class="form-label text-black-50">Correo</label>
+                            <input type="email" class="form-control" placeholder="Ingrese su correo"
+                                name="email" id="email" [(ngModel)]="user.email" required />
+                        </div>
+
+                        <div class="col-12 col-sm-6 mt-3 mt-sm-0">
+                            <label for="telefono" class="form-label text-black-50">Teléfono</label>
+                            <input type="text" class="form-control" placeholder="Ingrese número"
+                                name="telefono" id="telefono" [(ngModel)]="user.telefono" required maxlength="9" />
+                        </div>
+                    </div>
+
+                    <div class="row mt-4">
+                        <div class="col-12 col-sm-6">
+                            <label for="dni" class="form-label text-black-50">DNI</label>
+                            <input type="text" class="form-control" placeholder="Ingrese su DNI"
+                                name="dni" id="dni" [(ngModel)]="user.dni" required maxlength="8"/>
+                        </div>
+
+                        <div class="col-12 col-sm-6 mt-3 mt-sm-0">
+                            <label for="f_nacimiento" class="form-label text-black-50">Nacimiento</label>
+                            <input type="date" class="form-control" placeholder="Ingrese número"
+                                name="f_nacimiento" id="f_nacimiento" [(ngModel)]="user.f_nacimiento" required/>
+                        </div>
+                    </div>
+
+                    <div class="row mt-4">
+                        <div class="col-12 col-sm-6">
+                            <label for="password1" class="form-label text-black-50">Contraseña</label>
+                            <input [type]="password" class="form-control" placeholder="Contraseña" (keyup)="compare_password()"
+                                name="password1" id="password1" [(ngModel)]="password1" required maxlength="8"/>
+                        </div>
+
+                        <div class="col-12 col-sm-6 mt-3 mt-sm-0">
+                            <label for="password" class="form-label text-black-50">Confirmar contraseña</label>
+                            <div class="input-group">
+                                <input [type]="password" class="form-control" id="password"
+                                    placeholder="Confirme su contraseña" name="password" [(ngModel)]="user.password"
+                                    required (keyup)="compare_password()"/>
+                                <a class="btn btn-outline-primary" (click)="onClickPass()">
+                                    <i class="bi bi-eye-fill" aria-hidden="true" *ngIf="!show"></i>
+                                    <i class="bi bi-eye-slash-fill" aria-hidden="true" *ngIf="show"></i>
+                                </a>
+                            </div>
+                        
+                            <div class="alert alert-danger mt-2 text-center" role="alert" *ngIf="alert_pass">
+                                <em>Las contraseñas no coinciden</em>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mt-4">
+                        <div class="col-12 col-sm-6">
+                            <label for="genero" class="form-label text-black-50">Género</label>
+                            <select id="genero" class="form-select" name="genero" [(ngModel)]="user.genero" required> 
+                                <option value="" selected disabled>--Seleccione--</option>
+                                <option value="Masculino">Masculino</option>
+                                <option value="Femenino">Femenino</option>
+                              </select>
+                        </div>
+
+                        <div class="col-12 col-sm-6 mt-3 mt-sm-0">
+                            <label for="universidad" class="form-label text-black-50">Universidad</label>
+                            <select id="universidad" class="form-select" name="universidad" [(ngModel)]="user.universidad" required
+                            (change)="select_universidad()"> 
+                                <option selected disabled value="">--Seleccione--</option>
+                                <option value="{{item.id}}" *ngFor="let item of universidades"> {{item.id}} - {{item.name}} </option>
+                              </select>
+                        </div>
+                    </div>
+
+                    <div class="row mt-4">
+                        <div class="col-12 col-sm-6 mt-3 mt-sm-0" *ngIf="!isDisabledArea">
+                            <label for="area" class="form-label text-black-50">Área</label>
+                            <select id="area" class="form-select" name="area" [(ngModel)]="user.area" 
+                                [disabled]="isDisabledArea" (change)="select_area()" required> 
+                                <option selected disabled value="">--Seleccione--</option>
+                                <option *ngFor="let item of areas" value="{{item.name}}"> Área {{item.name}} </option>
+                              </select>
+                        </div>
+
+                        <div class="col-12 col-sm-6 mt-3 mt-sm-0" *ngIf="!isDisabledEscuela">
+                            <label for="escuela" class="form-label text-black-50">Escuela</label>
+                            <select id="escuela" class="form-select" name="escuela" [(ngModel)]="user.escuela" 
+                                [disabled]="isDisabledEscuela" required> 
+                                <option selected disabled value="">--Seleccione--</option>
+                                <option value="{{item.name}}" *ngFor="let item of escuelas"> {{item.name}} </option>
+                              </select>
+                        </div>
+                    </div>
+
+                    <div class="form-check d-flex justify-content-center mt-4">
+                        <input class="form-check-input" type="checkbox" name="recordar" id="flexCheckDefault"
+                            [(ngModel)]="recordar">
+                        <label class="form-check-label" for="flexCheckDefault"> &nbsp; &nbsp;
+                            Recordar sesión
+                        </label>
+                    </div>
+
+                    <div class="d-grid gap-2 mt-4">
+                        <button type="submit" class="btn btn-primary" [disabled]="registroForm.invalid">
+                            <i class="bi bi-person-check"></i> &nbsp; Registrar
+                        </button>
+                    </div>
+
+                    <p class="font-size-sm pt-4 text-center">
+                        Ya tienes cuenta?
+                        <a class="fw-bold text-decoration-none text-success" [routerLink]="['/login']">
+                            Iniciar sesión</a>
+                    </p>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
