--- a/Admision-sim/src/app/components/auth/login/login.component.html
+++ b/Admision-sim/src/app/components/auth/login/login.component.html
@@ -1,3 +1,6 @@
+
+<app-nav></app-nav>
+
 <div class="mt-5">
     <div class="mt-5 pt-5">
         <div class="mb-5 container d-flex justify-content-center">
