--- a/Admision-sim/src/app/components/shared/nav/nav.component.css
+++ b/Admision-sim/src/app/components/shared/nav/nav.component.css
@@ -3,6 +3,7 @@
     background-color: var(--bs-primary);
     border-radius: 5px;
     font-size: 1.1rem;
+    box-shadow: 0px 0px 5px rgb(111, 66, 193);
 }
 
 .nav-link.active {
