--- a/Admision-sim/src/app/components/shared/nav/nav.component.html
+++ b/Admision-sim/src/app/components/shared/nav/nav.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top shadow text-center"
-  style="background-color: rgba(255, 255, 255, 0.212); backdrop-filter: blur(10px);">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top shadow text-center" style="
+    background-color: rgba(255, 255, 255, 0.212);
+    backdrop-filter: blur(10px);
+  ">
   <div class="container-fluid container">
-    <a class="navbar-brand" [routerLink]="['/']">
-      Navbar
-    </a>
+    <a class="navbar-brand mx-2" [routerLink]="['/']"> Navbar </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,8 +12,8 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link mx-2" [routerLink]="['/']" routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact:true}">
-            <i class="bi bi-house"></i> &nbsp; Home
+            [routerLinkActiveOptions]="{ exact: true }">
+            <i class="bi bi-house"></i> &nbsp; Inicio
           </a>
         </li>
         <li class="nav-item">
@@ -35,24 +35,28 @@
             Cuenta
           </a>
           <ul class="dropdown-menu dropdown-menu-lg-end">
-            <li><a class="dropdown-item" [routerLink]="['/login']" routerLinkActive="active">
+            <li>
+              <a class="dropdown-item" [routerLink]="['/login']" routerLinkActive="active">
                 <i class="bi bi-person-check"></i> &nbsp; Iniciar sesión</a>
             </li>
-            <li><a class="dropdown-item" [routerLink]="['/registro']" routerLinkActive="active">
+            <li>
+              <a class="dropdown-item" [routerLink]="['/registro']" routerLinkActive="active">
                 <i class="bi bi-person-plus"></i> &nbsp; Registro</a>
             </li>
           </ul>
         </li>
       </ng-container>
-      
+
       <!-- Con inicio de sesión -->
       <ng-container *ngIf="user_lc != undefined">
         <li class="d-flex nav-item dropdown justify-content-center">
           <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            {{user_lc.nombres}}
+            {{ user_lc.nombres }}
           </a>
           <ul class="dropdown-menu dropdown-menu-lg-end">
-            <li><a class="dropdown-item" (click)="logout()" style="cursor: pointer;">
+            <li>
+              <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                style="cursor: pointer">
                 <i class="bi bi-arrow-bar-left"></i> &nbsp; Cerrar sesión</a>
             </li>
           </ul>
@@ -61,3 +65,23 @@
     </div>
   </div>
 </nav>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Cerrar sesión?</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          <i class="bi bi-x-lg"></i>
+        </button>
+        <button type="button" class="btn btn-danger" (click)="logout()">
+          <i class="bi bi-arrow-bar-left"></i> &nbsp;  Cerrar sesión
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
