--- a/Admision-sim/src/app/components/auth/register/register.component.html
+++ b/Admision-sim/src/app/components/auth/register/register.component.html
@@ -134,7 +134,8 @@
                     <p class="font-size-sm pt-4 text-center">
                         Ya tienes cuenta?
                         <a class="fw-bold text-decoration-none text-success" [routerLink]="['/login']">
-                            Iniciar sesión</a>
+                            Iniciar sesión
+                        </a>
                     </p>
                 </form>
             </div>
