--- a/Admision-sim/src/app/components/shared/nav/nav.component.html
+++ b/Admision-sim/src/app/components/shared/nav/nav.component.html
@@ -3,7 +3,9 @@
     backdrop-filter: blur(10px);
   ">
   <div class="container-fluid container">
-    <a class="navbar-brand mx-2" [routerLink]="['/']"> Navbar </a>
+    <a class="navbar-brand" [routerLink]="['/']"> 
+      <img src="../../../../assets/img/logo.png" style="width: 130px;"/> 
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
