--- a/Admision-sim/src/app/components/shared/footer/footer.component.html
+++ b/Admision-sim/src/app/components/shared/footer/footer.component.html
@@ -61,11 +61,15 @@
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                     <!-- Content -->
                     <h6 class="text-uppercase fw-bold mb-4 text-black">
-                        SimulaUNSCH
+                        Ingresayaa
                     </h6>
                     <p>
                         Este es una plataforma de simulacro de exámenes de admisión de la universidad Nacional San Cristóbal de Huamanga.
                     </p>
+
+                    <a class="navbar-brand" [routerLink]="['/']"> 
+                      <img src="../../../../assets/img/logo-color.png" class="w-50"/> 
+                    </a>
                 </div>
                 <!-- Grid column -->
 
