--- a/Admision-sim/src/app/components/shared/nav/nav.component.css
+++ b/Admision-sim/src/app/components/shared/nav/nav.component.css
@@ -10,3 +10,10 @@
     color: #FFF;
     font-style: bold;
 }
+
+.nav-item :hover {
+    text-decoration: none;
+    background-color: rgb(212, 172, 255);
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgb(174, 132, 253);
+}
