Nav y sidebar de admin agregado

--- a/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
+++ b/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
@@ -1,1 +1,10 @@
-<p>sidebar works!</p>
+
+<a class="btn btn-primary">Inicio</a>
+<ul>
+    <li [routerLink]="['/admin']" routerLinkActive="active" >
+        Inicio
+    </li>
+    <li [routerLink]="['/admin/curso']" routerLinkActive="active" >
+        Matemáticas
+    </li>
+</ul>
