--- a/Admision-sim/src/app/components/admin/inicio/inicio.component.html
+++ b/Admision-sim/src/app/components/admin/inicio/inicio.component.html
@@ -1,18 +1,8 @@
 <app-nav></app-nav>
 
-<div class="mt-5">
-    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
-        aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button>
 
-    <div class="offcanvas offcanvas-start text-bg-dark" data-bs-scroll="true" tabindex="-1"
-        id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <app-sidebar></app-sidebar>
-        </div>
-    </div>
+<div class="container-fluid pt-3">
+    <app-sidebar></app-sidebar>
 </div>
+
 <p>inicio works!</p>
