--- a/Admision-sim/src/app/components/admin/nav/nav.component.html
+++ b/Admision-sim/src/app/components/admin/nav/nav.component.html
@@ -12,7 +12,7 @@ backdrop-filter: blur(10px);
                 <a type="button" class="dropdown-toggle fs-5 text-black-50" data-bs-toggle="dropdown"
                     aria-expanded="false" style="text-decoration: none;">
                     {{ user_lc.nombres }} <small class="text-success" style="font-size: 0.9rem;">
-                        (<em>admin</em> &nbsp; <i class="bi bi-key-fill"></i>)
+                        (<i class="bi bi-key-fill"></i>)
                     </small> &nbsp;
                     <i class="bi bi-person-circle"></i>
                 </a>
