CRUD de User lado Admin

--- a/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
+++ b/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
@@ -22,6 +22,9 @@
                         <a class="nav-link p-2" [routerLink]="['/admin/resultados']" routerLinkActive="active"><i class="bi bi-check2-circle"></i>
                             &nbsp; &nbsp; Resultados
                         </a>
+                        <a class="nav-link p-2" [routerLink]="['/admin/usuarios']" routerLinkActive="active"><i class="bi bi-people"></i>
+                            &nbsp; &nbsp; Usuarios
+                        </a>
                     </nav>
                 </nav>
             </div>
