Scroll to top component

--- a/Admision-sim/src/app/components/shared/footer/footer.component.html
+++ b/Admision-sim/src/app/components/shared/footer/footer.component.html
@@ -129,7 +129,7 @@
                     dino.roca.27@unsch.edu.pe</a></p>
 
                     <p><a class="fas fa-envelope me-3 text-black-50" href="mailto:vladimir.sarmiento.27@unsch.edu.pe" target="_blank" style="text-decoration: none">
-                      vladimir.sarmiento.27@unsch.edu.pe</a></p>
+                      vladimir@gmail</a></p>
 
                     <p>
                         +51 921 680 694
