--- a/Admision-sim/src/app/components/admin/usuarios/index-usuario/index-usuario.component.html
+++ b/Admision-sim/src/app/components/admin/usuarios/index-usuario/index-usuario.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-<div class="container pt-5">
+<div class="container py-5">
     <app-sidebar></app-sidebar>
 
     <div class="card shadow mt-4" style="border-color: #F8F8F8;">
@@ -104,9 +104,7 @@
             </div>
         </div>
         <div class="card-footer text-center">
-            Pag
+            Pagination
         </div>
     </div>
 </div>
-
-<p>index-usuario works!</p>
