Historias en sidebar y validar un solo marcado

--- a/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
+++ b/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
@@ -42,6 +42,8 @@
                     <a class="nav-link p-2"><i class="bi bi-bank"></i> &nbsp; &nbsp; Educación Cíviva</a>
                     <a class="nav-link p-2"><i class="bi bi-arrows-collapse"></i> &nbsp; &nbsp; Física</a>
                     <a class="nav-link p-2"><i class="bi bi-globe-americas"></i> &nbsp; &nbsp; Geografía</a>
+                    <a class="nav-link p-2"><i class="bi bi-flag"></i> &nbsp; &nbsp; Historia del Perú</a>
+                    <a class="nav-link p-2"><i class="bi bi-fire"></i> &nbsp; &nbsp; Historia Universal</a>
                     <a class="nav-link p-2"><i class="bi bi-bezier"></i> &nbsp; &nbsp; Geometría</a>
                     <a class="nav-link p-2"><i class="bi bi-chat-square-quote"></i> &nbsp; &nbsp; Lenguaje</a>
                     <a class="nav-link p-2"><i class="bi bi-vector-pen"></i> &nbsp; &nbsp; Literatura</a>
