--- a/Admision-sim/src/app/components/admin/cursos/algebra/index-algebra/index-algebra.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/algebra/index-algebra/index-algebra.component.html
@@ -17,13 +17,19 @@
                     <div class="" [innerHTML]="item.pregunta"></div>
 
                     <div>
-                        <a class="text-primary m-2" [routerLink]="['/admin/algebra', item._id]"
+                        <a class="text-primary m-1" [routerLink]="['/admin/algebra', item._id]"
                             style="text-decoration: none;">
                             <i class="bi bi-pencil-fill"></i>
                         </a>
-                        <a type="button" class="text-danger m-2" data-bs-toggle="modal"
+
+                        <a type="button" class="text-danger m-1" data-bs-toggle="modal"
                             [attr.data-bs-target]="'#delete-' + item._id">
                             <i class="bi-trash-fill"></i>
+                        </a>
+
+                        <a class="m-1" [ngClass]="{'text-success': item.solucionario}" title="Con solucionario"
+                            style="text-decoration: none;">
+                            <i class="" [ngClass]="{'bi bi-check-circle-fill': item.solucionario}"></i>
                         </a>
 
                         <!-- Modal -->
