--- a/Admision-sim/src/app/components/admin/cursos/algebra/create-algebra/create-algebra.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/algebra/create-algebra/create-algebra.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-<div class="container py-5">
+<div class="container py-4">
     <app-sidebar></app-sidebar>
 
     <div class="card shadow mt-4" style="border-color: #f8f8f8">
@@ -130,7 +130,7 @@
 
                         <div class="d-grid gap-2 mt-4">
                             <button type="submit" class="btn btn-primary" [disabled]="registroForm.invalid && !valid">
-                                <i class="bi bi-person-check"></i> &nbsp; Registrar
+                                <i class="bi bi-plus-circle"></i> &nbsp; Registrar
                             </button>
                         </div>
                     </form>
