--- a/Admision-sim/src/app/components/admin/cursos/algebra/edit-algebra/edit-algebra.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/algebra/edit-algebra/edit-algebra.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-<div class="container py-5">
+<div class="container py-4">
     <app-sidebar></app-sidebar>
 
     <div class="card shadow mt-4" style="border-color: #F8F8F8;">
@@ -130,7 +130,7 @@
 
                         <div class="d-grid gap-2 mt-4">
                             <button type="submit" class="btn btn-primary" [disabled]="actualizarForm.invalid && valid">
-                                <i class="bi bi-person-check"></i> &nbsp; Actualizar
+                                <i class="bi bi-check2-circle"></i> &nbsp; Actualizar
                             </button>
                         </div>
                     </form>
