--- a/Admision-sim/src/app/components/admin/inicio/inicio.component.html
+++ b/Admision-sim/src/app/components/admin/inicio/inicio.component.html
@@ -1,8 +1,6 @@
 <app-nav></app-nav>
 
 
-<div class="container-fluid pt-3">
+<div class="container py-4">
     <app-sidebar></app-sidebar>
 </div>
-
-<p>inicio works!</p>
