--- a/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
+++ b/Admision-sim/src/app/components/admin/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
             
                 <nav>
                     <a class="nav-link p-2" [routerLink]="['/admin/algebra']" routerLinkActive="active"><i class="bi bi-superscript"></i> &nbsp; &nbsp; Álgebra</a>
-                    <a class="nav-link p-2"><i class="bi bi-lungs"></i> &nbsp; &nbsp; Anatomía</a>
+                    <a class="nav-link p-2" [routerLink]="['/admin/anatomia']" routerLinkActive="active"><i class="bi bi-lungs"></i> &nbsp; &nbsp; Anatomía</a>
                     <a class="nav-link p-2"><i class="bi bi-plus-slash-minus"></i> &nbsp; &nbsp; Aritmética</a>
                     <a class="nav-link p-2"><i class="bi bi-bug"></i> &nbsp; &nbsp; Biología</a>
                     <a class="nav-link p-2"><i class="bi bi-currency-euro"></i> &nbsp; &nbsp; Economía</a>
