--- a/Admision-sim/src/app/components/admin/usuarios/create-usuario/create-usuario.component.html
+++ b/Admision-sim/src/app/components/admin/usuarios/create-usuario/create-usuario.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-<div class="container pt-5">
+<div class="container py-4">
     <app-sidebar></app-sidebar>
 
     <div class="card shadow mt-4" style="border-color: #F8F8F8;">
